--- a/index.html
+++ b/index.html
@@ -484,14 +484,14 @@
                  data-link="https://play.google.com/store/apps/details?id=com.InovareGames.Murino">
                 <h3>МУРИНО</h3>
                 <p>Хоррор-экшен с атмосферой отчаяния и потерянности, но с надеждой на будущее.</p>
-                <div class="launch-label">▶ PLAY</div>
+                <div class="launch-label">▶ ИГРАТЬ</div>
             </div>
             <!-- карточка Село Молочное -->
             <div class="card interactive-btn reveal game-card"
                  data-link="https://play.google.com/store/apps/details?id=com.InovareGames.CeloMolochnoe">
                 <h3>СЕЛО МОЛОЧНОЕ</h3>
                 <p>Квест-survival с нелинейным сюжетом и динамическими событиями, с вашими любимыми героями мемов.</p>
-                <div class="launch-label">▶ PLAY</div>
+                <div class="launch-label">▶ ИГРАТЬ</div>
             </div>
         </div>
     </div>
